--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "azure-iot-device": "^1.1.7",
+    "azure-iot-device-mqtt": "^1.1.7",
+    "azure-iothub": "latest",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0",
-    "azure-iothub": "latest"
+    "serve-favicon": "~2.3.0"
   }
 }
